--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 	<section>
 		<p>
 Nomoskar! &#x1f64f; <br>
-I am Bappa Ghosh, a postdoctoral researcher at the University of North Dakota, USA, with Prof. Jerome Delhommelle at MSNEP <a href="https://themsnepgroup.github.io/">group</a>. Currently, I am working on non-equilibrium statical thermodynamics of active matter systems to compute entropy production through compression algorithms, simulations and machine learning.<br>
+I am Bappa Ghosh, a postdoctoral researcher at the University of North Dakota, USA, with Prof. Jerome Delhommelle at MSNEP <a href="https://themsnepgroup.github.io/">group</a>. Currently, I am working on non-equilibrium statical thermodynamics of active matter systems through algorithms, simulations and machine learning.<br>
 
-I have completed my doctoral studies on non-equilibrium polymer dynamics from the Indian Institute of Science Education and Research (IISER) Pune, India. I have worked on multiple problems related to the behaviour of polymer chains under force through Langevin dynamics simulation and theory in Dr. Srabanti Chaudhury's<a href="https://sites.google.com/site/srabantic01/"> group</a>. I have also worked on atomistic simulations of crystal growth of organic molecules and gas hydrate systems <br> I am broadly curious about computers and chemistry. This website is meant to share my activities on related topics.
+I have completed my doctoral studies on non-equilibrium polymer dynamics from the Indian Institute of Science Education and Research (IISER) Pune, India. I have worked on multiple problems related to the behaviour of polymer chains under force through Langevin dynamics simulation and theory in Dr. Srabanti Chaudhury's<a href="https://sites.google.com/site/srabantic01/"> group</a>. <br> I am broadly curious about computers and chemistry. This website is meant to share my activities on related topics.
 </p>
 <h3> Work </h3>
 <p></p>
