--- a/publications.html
+++ b/publications.html
@@ -28,18 +28,24 @@
 <br>
 <div class="list">
   <ol reversed>
-    <li><b>B. Ghosh</b>, J. Sarabdani*, S. Chaudhury*, and T. Ala-Nissila, Pulling a folded polymer through a nanopore, <b>Journal of Physics: Condensed Matter</b>,(2020).<a href="https://iopscience.iop.org/article/10.1088/1361-648X/abb687"> [url]</a> <a href="https://bghosh4u.github.io/files/2020_JPCM.pdf">[pdf]</a> </li> 
+    <li><b>B. Ghosh</b>, I. Essafri, C. Desgranges,  and J. Delhommelle, Machine Learning and Active Fluids, (In preparation).</li> 
+    <br>
+    
+    <li>I. Essafri, <b>B. Ghosh</b>,  C. Desgranges,  and J. Delhommelle, Designing and Realizing Active Fluids, (In preparation).</li> 
+    <br>
+    
+    <li><b>B. Ghosh</b>, J. Sarabdani*, S. Chaudhury*, and T. Ala-Nissila, Pulling a folded polymer through a nanopore, <b>Journal of Physics: Condensed Matter</b>,(2020).<a href="https://iopscience.iop.org/article/10.1088/1361-648X/abb687"> [url]</a> <a href="https://omegabappa.github.io/files/2020_JPCM.pdf">[pdf]</a> </li> 
     <br>
 
-    <li><b>B. Ghosh</b> and S.Chaudhury*, Translocation dynamics of an asymmetrically charged polymer through a pore under the influence of different pH conditions, <b>Journal of Physical Chemistry B,</b> (2019).  <a href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.8b12301"> [url]</a> <a href="https://bghosh4u.github.io/files/2019_JPCB.pdf"> [pdf]</a></li><br>
+    <li><b>B. Ghosh</b> and S.Chaudhury*, Translocation dynamics of an asymmetrically charged polymer through a pore under the influence of different pH conditions, <b>Journal of Physical Chemistry B,</b> (2019).  <a href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.8b12301"> [url]</a> <a href="https://omegabappa.github.io/files/2019_JPCB.pdf"> [pdf]</a></li><br>
 
-    <li>P. Nakate, <b>B. Ghosh</b>, S. Das*, S. Roy* and R. Kumar*, Molecular dynamics study on growth of carbon dioxide and methane hydrate from a seed crystal, <b>Chinese Journal of Chemical Engineering</b>, (2019) (invited article). <a href="https://www.sciencedirect.com/science/article/abs/pii/S1004954118309388"> [url]</a><a href="https://bghosh4u.github.io/files/2019_CJCHE.pdf"> [pdf]</a> </li><br>
+    <li>P. Nakate, <b>B. Ghosh</b>, S. Das*, S. Roy* and R. Kumar*, Molecular dynamics study on growth of carbon dioxide and methane hydrate from a seed crystal, <b>Chinese Journal of Chemical Engineering</b>, (2019) (invited article). <a href="https://www.sciencedirect.com/science/article/abs/pii/S1004954118309388"> [url]</a><a href="https://omegabappa.github.io/files/2019_CJCHE.pdf"> [pdf]</a> </li><br>
 
-    <li><b>B. Ghosh</b> and S.Chaudhury*, Influence of the location of attractive polymer-pore interactions on translocation dynamics, <b>Journal of Physical Chemistry B</b>, (2018). <a href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.7b09208"> [url]</a> <a href="https://bghosh4u.github.io/files/2018_JPCB.pdf">[pdf]</a></li><br>
+    <li><b>B. Ghosh</b> and S.Chaudhury*, Influence of the location of attractive polymer-pore interactions on translocation dynamics, <b>Journal of Physical Chemistry B</b>, (2018). <a href="https://pubs.acs.org/doi/abs/10.1021/acs.jpcb.7b09208"> [url]</a> <a href="https://omegabappa.github.io/files/2018_JPCB.pdf">[pdf]</a></li><br>
 
-    <li> J. Sarabadani*, <b>B. Ghosh</b>, S.Chaudhury*, and T.Ala-Nissila, Dynamics of end-pulled polymer translocation through a nanopore, <b>EPL-Europhysics Letters</b>, (2017).<a href="https://iopscience.iop.org/article/10.1209/0295-5075/120/38004/meta"> [url]</a> <a href="https://bghosh4u.github.io/files/2017_EPL.pdf"> [pdf]</a></li><br>
+    <li> J. Sarabadani*, <b>B. Ghosh</b>, S.Chaudhury*, and T.Ala-Nissila, Dynamics of end-pulled polymer translocation through a nanopore, <b>EPL-Europhysics Letters</b>, (2017).<a href="https://iopscience.iop.org/article/10.1209/0295-5075/120/38004/meta"> [url]</a> <a href="https://omegabappa.github.io/files/2017_EPL.pdf"> [pdf]</a></li><br>
 
-    <li> <b>B. Ghosh</b> and S.Chaudhury*, Fluctuation theorems for total entropy production in generalized Langevin systems,  <b>Physica A: Statistical Mechanics and its Applications</b>, (2017). <a href="https://www.sciencedirect.com/science/article/pii/S0378437116306161"> [url]</a> <a href="https://bghosh4u.github.io/files/2017_PA.pdf"> [pdf]</a></li><br>
+    <li> <b>B. Ghosh</b> and S.Chaudhury*, Fluctuation theorems for total entropy production in generalized Langevin systems,  <b>Physica A: Statistical Mechanics and its Applications</b>, (2017). <a href="https://www.sciencedirect.com/science/article/pii/S0378437116306161"> [url]</a> <a href="https://omegabappa.github.io/files/2017_PA.pdf"> [pdf]</a></li><br>
   </ol>
 </div>
 </article>
