--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <a href="https://omegabappa.github.io"> Home </a>
   <a href="research.html"> Research </a>
   <a href="https://scholar.google.co.in/citations?user=nSfKXrsAAAAJ&hl=en&authuser=1"> Publications </a>
-  <a href="https://drive.google.com/file/d/18A8XS15gJOL6JV1NMBrQUYQW_or78YNc/view?usp=sharing"> Curriculum Vitae</a>
+  <a href="./files/Bappa_CV.pdf"> Curriculum Vitae</a>
   <a href="links.html"> Useful Links </a>
 </div>
 
@@ -47,7 +47,6 @@
 <a href="https://www.researchgate.net/profile/Bappa_Ghosh4">ResearchGate </a> <b>*</b>
 <a href="https://orcid.org/0000-0002-4054-0859">ORCID</a> <b>*</b>
 <a href="https://twitter.com/omegabappa">Twitter</a>
-
 </p> <br>
 
 <h2> About Me </h2>
