--- a/research.html
+++ b/research.html
@@ -23,7 +23,7 @@
   <a href="https://omegabappa.github.io"> Home </a>
   <a href="research.html"> Research </a>
   <a href="https://scholar.google.co.in/citations?user=nSfKXrsAAAAJ&hl=en&authuser=1"> Publications </a>
-  <a href="https://drive.google.com/file/d/18A8XS15gJOL6JV1NMBrQUYQW_or78YNc/view?usp=sharing"> Curriculum Vitae</a>
+  <a href="./files/Bappa_CV.pdf"> Curriculum Vitae</a>
   <a href="links.html"> Useful Links </a>
 </div>
 
