--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 Nomoskar! &#x1f64f; <br>
 I am Bappa Ghosh, a postdoctoral researcher at the University of North Dakota, USA, with Prof. Jerome Delhommelle at MSNEP
-<a href="https://themsnepgroup.github.io/">group</a>. Currently, I am working on non-equilibrium statical thermodynamics of active matter systems through algorithms, simulations and machine learning.<br>
+<a href="https://themsnepgroup.github.io/">group</a>. Currently, I am working on non-equilibrium statistical thermodynamics of active matter systems through algorithms, simulations and machine learning.<br>
 
 I have completed my doctoral studies on non-equilibrium polymer dynamics from the Indian Institute of Science Education and Research (IISER) Pune, India. I have worked on multiple problems related to the behaviour of polymer chains under force through Langevin dynamics simulation and theory in Dr. Srabanti Chaudhury's<a href="https://sites.google.com/site/srabantic01/"> group</a>. <br> I am broadly curious about computers and chemistry. This website is meant to share my activities on related topics.
 </p>
