--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<!-- https://omegabappa.github.io/ -->
-<html lang="en-us">
+<html lang="en">
 <head>
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-80116460-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -13,106 +12,112 @@
   gtag('config', 'UA-80116460-2');
 </script>
 
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="keywords" content="bappa, ghosh, iit kanpur, iiser pune, chemistry, theory, ncl, simulation">
-<meta name="description" content="Personal website of Bappa Ghosh, containing CV, research, publication, work and other activities">
-<meta name="author" content="Bappa Ghosh">
-<meta name="robots" content="index, follow">
-<link rel="stylesheet" href="styles.css">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<title> Bappa's Web Abode </title>
-
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bappa's Web-Abode</title>
+  <!-- Link to the external CSS file -->
+  <link rel="stylesheet" href="styles.css">
 </head>
-
-
 <body>
-<div class="sidenav">
-  <img src="./files/bappa.jpg">
-  <a href="https://omegabappa.github.io"> Home </a>
-  <a href="research.html"> Research </a>
-  <a href="https://scholar.google.co.in/citations?user=nSfKXrsAAAAJ&hl=en&authuser=1"> Publications </a>
-  <a href="./files/Bappa_CV.pdf"> Curriculum Vitae</a>
-  <a href="links.html"> Useful Links </a>
-</div>
-
-<div class="main">
-
-<a style='color: Red', href="#whatsnew"> <marquee>What's Now/New !! </marquee></a> <br>
-<p style="background-color: lightsalmon;">
-<a href="https://scholar.google.co.in/citations?user=nSfKXrsAAAAJ&hl=en&authuser=1">Google Scholar </a> <b>*</b>
-<a href="https://www.linkedin.com/in/bappa-ghosh-43327866/">LinkedIn </a> <b>*</b>
-<a href="https://github.com/omegabappa">GitHub </a> <b>*</b>
-<a href="https://www.researchgate.net/profile/Bappa_Ghosh4">ResearchGate </a> <b>*</b>
-<a href="https://orcid.org/0000-0002-4054-0859">ORCID</a> <b>*</b>
-<a href="https://twitter.com/omegabappa">Twitter</a>
-</p> <br>
-
-<h2> About Me </h2>
-
-Nomoskar! &#x1f64f; <br>
-I am Bappa Ghosh, a postdoctoral researcher at the University of North Dakota, USA, with Prof. Jerome Delhommelle at MSNEP
-<a href="https://themsnepgroup.github.io/">group</a>. Currently, I am working on non-equilibrium statistical thermodynamics of active matter systems through algorithms, simulations and machine learning.<br>
-
-I have completed my doctoral studies on non-equilibrium polymer dynamics from the Indian Institute of Science Education and Research (IISER) Pune, India. I have worked on multiple problems related to the behaviour of polymer chains under force through Langevin dynamics simulation and theory in Dr. Srabanti Chaudhury's<a href="https://sites.google.com/site/srabantic01/"> group</a>. <br> I am broadly curious about computers and chemistry. This website is meant to share my activities on related topics.
-</p>
-<br>
-    <p><b>Bappa Ghosh,</b></p>
-    <p> Postdoctoral Researcher,<br> University of North Dakota, USA,<br>Ph.D.(Theoretical Chemistry) IISER Pune,<br> M.Sc.(Chemistry) IIT Kanpur.</p>
-    Email: <a href="mailto:bghosh4u@gmail.com">bgchem90@gmail.com</a><br>
-    Mobile: <a href="#">+17013147347</a>
-<br>
-<br>
-
-<h3 style='color:red'> <marquee> What's Now/New !! </marquee></h3><br>
-<div class="row" id="whatsnew">
-<div class="column left" style="background-color:white;">
+  <header>
+    <a href="https://omegabappa.github.io/" class="logo">
+      <img src="./files/bappa2.webp" alt="Bappa Ghosh">
+    </a>
+    <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+    <nav>
+      <ul class="nav-links">
+        <li><a href="https://omegabappa.github.io/">Home</a></li>
+        <!-- <li><a href="research.html">Research</a></li> -->
+        <li><a href="https://scholar.google.co.in/citations?user=nSfKXrsAAAAJ&hl=en&authuser=1">Publications</a></li>
+        <li><a href="./files/Bappa_CV.pdf">Resume</a></li>
+        <!-- <li><a href="links.html"> Useful links</a></li>
+        <li><a href="contact.html">Contact Me</a></li> -->
+      </ul>
+    </nav>
+    <label for="nav-toggle" class="nav-toggle-label">
+      <span></span>
+    </label>
+  </header>
 
 
-<ul>
+  <body>
 
-<li> <a href="https://meetings.aps.org/Meeting/MAR22/Session/N00.384"> <b> March 2022: </b>Presented work on algorithms in entropy production 
-in APS March 2022 Meeting in Chicago, USA .</a></li>
+  </p> <br>
 
-<li> <a href="https://twitter.com/TheMSNEPGroup/status/1442618424354648070"> <b> September 2021: </b>Presented poster on “Self-organization in Active Matter: From Living Crystals to Cells and Living Systems” at the Annual North Dakota Biomedical Engineering Symposium, University of North Dakota, USA.</a></li>
+   
+  Nomoskar! &#x1f64f; <br> <br>
+  I am Bappa Ghosh, a postdoctoral researcher at the University of North Dakota, USA, in Prof. Motoki Takaku's 
+  <a href="https://sites.google.com/view/takakulab/motoki-takaku"> research group</a>. Currently, I am working on chromatin 3D structure and dynamics to understand cancer genome organization. I have completed my doctoral studies on non-equilibrium polymer dynamics from the Indian Institute of Science Education and Research (IISER) Pune, India.
+  I have worked on multiple problems related to the behaviour of polymer chains under force through Langevin dynamics simulation and theory 
+  in Dr. Srabanti Chaudhury's <a href="https://sites.google.com/site/srabantic01/"> group</a>. <br> I am broadly curious about computers, chemistry and chromatin.
+   This website is meant to share my activities on related topics.
+  </p>
+  <br>
 
 
-<li> <a href="https://themsnepgroup.github.io/index.html"> <b> September 2021: </b>Joined as Postdoctoral Researcher at the MSNEP Group, University of North Dakota to work on information theory, active matter 
-and machine learning.</a></li>
-
-</ul>
-
+    <div class="container">
+      <a href="#whatsnew" class="whats-new">
+        <span>What's New!!</span>
+      </a>
   
-  </div>
-  <div class="column right" style="background-color:white;">
-    <a class="twitter-timeline" data-width="300" data-height="700" data-theme="dark" href="https://twitter.com/omegabappa?ref_src=twsrc%5Etfw">Tweets by omegabappa</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  </div>
+      <ul class="updates-list">
 
-<h6> (*This webpage is optimized and tested for viewing in desktops/tablets with recent Firefox/Google Chrome browsers.
-  To use this website template and download any file(s), please head to my <a href="https://github.com/omegabappa/omegabappa.github.io">GitHub </a> page!)
-</h6>
-</div>
+        <li><a href="https://www.aiche.org/conferences/ragsab/2024/technical-program"><b>September 2024:</b> Invited talk on "Chromatin 3D Map of Cancer Cells: Big Data, Artificial Intelligence and Promisesg"  
+            at the NSF supported AIChE workshop RAGSAB at California, USA </a></li>
 
-</div>
+        <li><a href="https://meetings.cshl.edu/abstracts.aspx?meet=NUCLEUS&year=24"><b>May 2024:</b> Presented a poster on "3D Chromatin Organization via Nanopore Concatemer Sequencing"  
+            at the conference “Genome Organization & Nuclear Function” at Cold Spring Harbor Laboratory, New York.</a></li>
 
-<script>
-/* Loop through all dropdown buttons to toggle between hiding and showing its dropdown content - This allows the user to have multiple dropdowns without any conflict */
-var dropdown = document.getElementsByClassName("dropdown-btn");
-var i;
+        <li><a href="https://www.grc.org/genome-architecture-in-cell-fate-and-disease-grs-conference/2023/"><b>June 2023:</b> Presented a poster on "3D Chromatin Organization in Breast Cancer Cells having GATA3 Mutation" at the "Genome Architecture in Cell Fate and Disease", 
+            Gordon Research Conference, California, USA.  </a></li>
 
-for (i = 0; i < dropdown.length; i++) {
-  dropdown[i].addEventListener("click", function() {
-  this.classList.toggle("active");
-  var dropdownContent = this.nextElementSibling;
-  if (dropdownContent.style.display === "block") {
-  dropdownContent.style.display = "none";
-  } else {
-  dropdownContent.style.display = "block";
-  }
-  });
-}
-</script>
+        <li><a href="#"><b>April 2023:</b> Conducted a workshop on "Chat generative pre-training transformer (chatGPT) in the 
+            context of scientific research" at the School of Medicine and Health Sciences, University of North Dakota, USA. </a></li>
+
+        <li><a href="https://meetings.aps.org/Meeting/MAR22/Session/N00.384"><b>March 2022:</b> Presented work on algorithms in entropy production 
+            at the APS March 2022 Meeting in Chicago, USA.</a></li>
+  
+        <li><a href="https://twitter.com/TheMSNEPGroup/status/1442618424354648070"><b>September 2021:</b> Presented poster on 
+            “Self-organization in Active Matter: From Living Crystals to Cells and Living Systems” at the Annual North Dakota Biomedical Engineering Symposium, University of North Dakota, USA.</a></li>
+  
+        
+        <!-- <li><a href="old.html"><b>Click for past events...</b> </a></li> -->
+      </ul>
+    </div>
+
+
+    
+  </body>
+   
+
+
 
 </body>
-</html> 
+
+
+  <!-- Footer Section -->
+<footer>
+     <div class="social-links">
+      <a href="https://scholar.google.co.in/citations?user=nSfKXrsAAAAJ&hl=en&authuser=1" target="_blank">
+        <img src="images/google-scholar4372.jpg" alt="Google Scholar Logo">
+      </a>
+      <a href="https://www.linkedin.com/in/bappa-ghosh-43327866/" target="_blank">
+        <img src="images/LinkedIn_logo_initials.png" alt="LinkedIn Logo">
+      </a>
+      <a href="https://github.com/omegabappa" target="_blank">
+        <img src="images/GitHub-logo.png" alt="GitHub Logo">
+      </a>
+      <a href="https://www.researchgate.net/profile/Bappa_Ghosh4" target="_blank">
+        <img src="images/ResearchGate_icon.png" alt="ResearchGate Logo">
+      </a>
+      <a href="https://orcid.org/0000-0002-4054-0859" target="_blank">
+        <img src="images/ORCID_iD.png" alt="ORCID Logo">
+      </a>
+      <a href="https://twitter.com/omegabappa" target="_blank">
+        <img src="images/twitter-x-app.png" alt="Twitter Logo">
+      </a>
+    </div>
+  </footer>
+  
+
+</html>
