--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         
                     </ul>
                 </div>
-            <div class="interests">
+            <div class="education">
                 <h3>Education</h3>
                 <ul>
                     <li>
