--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Template</title>
+    <title>Bappa's Web-abode</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
