--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
                 </a>
             
                 <ul class="updates-list">
-          
+
+
+                    <li><a href="https://bioquicknews.com/2024-asilomar-chromatin-chromosomes-and-epigenetics-conference-session-4-chromosomes-and-nuclear-organization/#more-16991"><b>December 2024:</b> Research talk on "Unraveling the Effects of Cancer-Derived Pioneer Factor Mutations on 3D Chromatin Architecture 
+                        Using Nanopore Concatemer Sequencing."  
+                        at the 46th Annual International Asilomar Chromatin, Chromosomes and Epigenetics Conference at Monterery Bay, USA </a></li>
                   <li><a href="https://www.aiche.org/conferences/ragsab/2024/technical-program"><b>September 2024:</b> Invited talk on "Chromatin 3D Map of Cancer Cells: Big Data, 
                     Artificial Intelligence and Promises"  
                       at the NSF supported AIChE workshop RAGSAB at California, USA </a></li>
