--- a/index.html
+++ b/index.html
@@ -30,9 +30,13 @@
             <div class="menu-icon" onclick="toggleMenu()">☰</div>
             <ul class="menu">
                 <li><a href="https://omegabappa.github.io/">Home</a></li>
+                <li><a href="./subpages/projects.html">Projects</a></li>
                 <li><a href="https://scholar.google.co.in/citations?user=nSfKXrsAAAAJ&hl=en&authuser=1">Publications</a></li>
-                <li><a href="#services">Contact</a></li>
-                <li><a href="./files/Bappa_CV.pdf">Resume</a></li>
+                <li><a href="https://calendly.com/bappa/meeting">Contact</a></li>
+                <li><a href="./subpages/tool&links.html"> Tools & Links </a></li>
+                <li><a href="./files/Bappa_CV.pdf">CV</a></li>
+
+
             </ul>
         </nav>
     </header>
@@ -161,7 +165,7 @@
     
 
     <footer>
-        <p>&copy; 2024 Bappa Ghosh. All rights reserved.</p>
+        <p>&copy; 2024 Ghosh</p>
     </footer>
 
     <script>
